@@ -106,6 +106,7 @@ Bugs fixed
 - Bug 2500 - Ipv[4,6]RawSocket ignores IpTtl tag
 - Bug 2507 - ConfigStore RawTextConfigLoad doesn't reset stream error state
 - Bug 2508 - Duplicate of bug 2507
+- No BugId - Arp logging: label with request or reply properly
 
 Known issues
 ------------
